<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nourriture</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="login">Sign in</string>
    <string name="home">Welcome to Nourriture !</string>
    <string name="register">New to Nourriture ? sign up now</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="signfb">Sign in with facebook</string>
    <string name="facebook_app_id">1531140737166099</string>
    <string name="title_facebook_login">Nourriture fb login</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Login</item>
        <item >Register</item>
    </string-array>
    <string-array name="nav_drawer_items_connected">
        <item >My profile</item>
        <item >My moments</item>
        <item >Browse Ingredients</item>
        <item >Browse Users</item>
        <item >Browse Recipes</item>
        <item >Sign out</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/profile</item>
        <item>@drawable/sign_in</item>
        <item>@drawable/sign_out</item>
        <item>@drawable/sign_up</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ingredient</item>
    </array>
</resources>
